2013-01-31  Tony Chang  <tony@chromium.org>

        [Chromium] webkit_unit_tests should depend on base/allocator for ASAN
        https://bugs.webkit.org/show_bug.cgi?id=108497

        Reviewed by James Robinson.

        * WebKitUnitTests.gyp:

2013-01-31  Alexandre Elias  <aelias@chromium.org>

        Call FrameView::contentsResized() when setting fixed layout size
        https://bugs.webkit.org/show_bug.cgi?id=107922

        Reviewed by James Robinson.

        In fixed layout mode, we should be calling contentsResized() when the
        fixed layout size is changed, but not laying out when the visible
        content rect changes.

        Previously landed as r140869 but was reverted due to a bug in bundled
        Chromium-specific code. This patch includes just the minimum needed in
        WebCore.

        New WebFrameTest: FrameViewNeedsLayoutOnFixedLayoutResize.  Some
        flaky and obsolete tests for the old page scale mode are also deleted.

        * tests/WebFrameTest.cpp:

2013-01-31  Tommy Widenflycht  <tommyw@google.com>

        [chromium] MediaStream API: Rename WebMediaStreamDescriptor and WebMediaStreamComponent to WebMediaStream and WebMediaStreamTrack
        https://bugs.webkit.org/show_bug.cgi?id=108458

        Reviewed by Adam Barth.

        Only renames, no other code changes.

        * public/WebMediaStreamRegistry.h:
        (WebKit):
        (WebMediaStreamRegistry):
        * public/WebUserMediaRequest.h:
        (WebKit):
        (WebUserMediaRequest):
        * src/WebMediaStreamRegistry.cpp:
        (WebKit::WebMediaStreamRegistry::lookupMediaStreamDescriptor):
        * src/WebUserMediaRequest.cpp:
        (WebKit::WebUserMediaRequest::requestSucceeded):

2013-01-31  Alec Flett  <alecflett@chromium.org>

        IndexedDB: Remove WebKit API for old onSuccess/onUpgradeNeeded
        https://bugs.webkit.org/show_bug.cgi?id=108399

        Reviewed by Dimitri Glazkov.
