@@ -1,3 +1,14 @@
+2013-01-31  Dan Alcantara  <dfalcantara@chromium.org>
+
+        WebFrameTest.DisambiguationPopup is failing
+        https://bugs.webkit.org/show_bug.cgi?id=108160
+
+        Reviewed by Adam Barth.
+
+        Fix the unit test so that it is using the right HTML file.
+
+        * tests/WebFrameTest.cpp:
+
 2013-01-31  Tony Chang  <tony@chromium.org>
 
         [Chromium] webkit_unit_tests should depend on base/allocator for ASAN
